# code-autopsy

./: AGENTS.md  README.md  SCOPE.md  pyproject.toml
docs/: ARCHITECTURE.md  IMPLEMENTATION-PLAN.md  SCORING-DESIGN.md
src/autopsy/: cli.py  config.py  models.py  scanner.py
src/autopsy/analyzers/: base.py  python.py
src/autopsy/rules/: complexity.py
tests/: test_complexity.py  test_config.py  test_python_analyzer.py  test_scanner.py
tests/fixtures/: complexity_samples.py  sample_functions.py
